Bug 169508 - Accessibility options behave in reverse for footnotes and endnotes
Summary: Accessibility options behave in reverse for footnotes and endnotes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2025-11-18 07:38 UTC by Saburo
Modified: 2025-11-25 12:53 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample-footnote (10.00 KB, application/vnd.oasis.opendocument.text)
2025-11-18 07:43 UTC, Saburo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Saburo 2025-11-18 07:38:52 UTC
Description:
Even if you uncheck "Check document contains footnotes" in the accessibility options, "Avoid footnotes" still appears.
If you uncheck "Check document contains endnotes", "Avoid footnotes" will no longer be displayed.

Steps to Reproduce:
1. New Text Document.
2. Enter some word.
3. Insert footnote.
4. Tools > Options > Accessibility > [ ]Check document contains footnotes
5. Confirm [Accessiblity Check]tab on sidebar.

Actual Results:
Avoid footnotes.

Expected Results:
Footnotes are not checked for accessibility


Reproducible: Always


User Profile Reset: No

Additional Info:
2025-11-12
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded
Comment 1 Saburo 2025-11-18 07:43:42 UTC
Created attachment 204057 [details]
sample-footnote

https://opengrok.libreoffice.org/xref/core/sw/source/core/access/AccessibilityCheck.cxx

2608  class FootnoteEndnoteCheck : public DocumentCheck
2609  {
2610  public:
2611      FootnoteEndnoteCheck(sfx::AccessibilityIssueCollection& rIssueCollection)
2612          : DocumentCheck(rIssueCollection)
2613      {
2614      }
2615  
2616      void check(SwDoc* pDoc) override
2617      {
2618          for (SwTextFootnote* pTextFootnote : pDoc->GetFootnoteIdxs())
2619          {
2620              SwFormatFootnote const& rFootnote = pTextFootnote->GetFootnote();
2621              OUString sError = rFootnote.IsEndNote() ? SwResId(STR_AVOID_ENDNOTES)
2622                                                      : SwResId(STR_AVOID_FOOTNOTES);
2623              sfx::AccessibilityIssueID eIssueID = rFootnote.IsEndNote()
2624                                                       ? sfx::AccessibilityIssueID::AVOID_FOOTNOTES
2625                                                       : sfx::AccessibilityIssueID::AVOID_ENDNOTES;
2626              auto pIssue = lclAddIssue(m_rIssueCollection, sError, eIssueID,
2627                                        sfx::AccessibilityIssueLevel::WARNLEV);
2628              pIssue->setDoc(*pDoc);
2629              pIssue->setIssueObject(IssueObject::FOOTENDNOTE);
2630              pIssue->setTextFootnote(pTextFootnote);
2631          }
2632      }
2633  };

Proposed fixes for generation AI
2623              sfx::AccessibilityIssueID eIssueID = rFootnote.IsEndNote()
2624                                                       ? sfx::AccessibilityIssueID::AVOID_ENDNOTES
2625                                                       : sfx::AccessibilityIssueID::AVOID_FOOTNOTES;
Comment 2 Dieter 2025-11-18 20:37:23 UTC
I confirm it with

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 12; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

Michael, I think you might be interested in this issue.
Comment 3 Michael Weghorn 2025-11-19 09:08:35 UTC
(In reply to Saburo from comment #1)
> Proposed fixes for generation AI
> 2623              sfx::AccessibilityIssueID eIssueID = rFootnote.IsEndNote()
> 2624                                                       ?
> sfx::AccessibilityIssueID::AVOID_ENDNOTES
> 2625                                                       :
> sfx::AccessibilityIssueID::AVOID_FOOTNOTES;

Thanks, that looks good at first glance. Could you please submit a corresponding change to Gerrit?

https://wiki.documentfoundation.org/Development/GetInvolved
Comment 4 Commit Notification 2025-11-21 06:06:07 UTC
Saburo Yoshida committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e4867c607d94ca0be002177c36ea135249f2de08

tdf#169508: fix reversed accessibility options for footnotes/endnotes

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Buovjaga 2025-11-21 06:06:27 UTC
Saburo: feel free to close the report as fixed.
Comment 6 Commit Notification 2025-11-21 10:08:44 UTC
Saburo Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/0d8a10559ad40177725894bd3061bb464f4d1038

tdf#169508: fix reversed accessibility options for footnotes/endnotes

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Shinji Enoki 2025-11-25 12:47:28 UTC
I've confirmed the fix in the following build. Thanks!

Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 02b0772b31fe83f8dc5c6f196a82aea77a8db34f
CPU threads: 12; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Calc: threaded