tdf#169508: fix reversed accessibility options for footnotes/endnotes

The accessibility check options were reversed for footnotes and endnotes.

Change-Id: I8db6546551b26d79726724199886098c3c00873c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194258
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Tested-by: Jenkins